tests/baselines/reference/genericMergedDeclarationUsingTypeParameter2.errors.txt
genericMergedDeclarationUsingTypeParameter2.ts(3,19): error TS2304: Cannot find name 'T'.
genericMergedDeclarationUsingTypeParameter2.ts(4,14): error TS2304: Cannot find name 'T'.


==== genericMergedDeclarationUsingTypeParameter2.ts (2 errors) ====
    class foo<T> { constructor(x: T) { } }
    module foo {
        export var x: T;
                      ~
!!! error TS2304: Cannot find name 'T'.
        var y = <T>1;
                 ~
!!! error TS2304: Cannot find name 'T'.
    }
    